--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
         <!-- Conteúdo do Header (Hero) -->
         <div class="relative z-10">
             <h1 class="text-5xl md:text-7xl font-bold text-white tracking-wider leading-tight">
-                GABRIEL PELA
+                <span class="text-emerald-400">GABRIEL</span> <span class="text-white">PELA</span>
             </h1>
-            <h2 class="text-5xl md:text-7xl font-bold text-emerald-400 tracking-wider">
+            <h2 class="text-5xl md:text-7xl font-bold text-red-600 tracking-wider">
                 EUROPA
             </h2>
             <!-- Animação movida apenas para o ícone -->
