--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
         <!-- Contêiner das Partículas (Verde, Branco, Vermelho) --><div id="particle-container"></div>
 
         <!-- Conteúdo do Header (Hero) --><div class="relative z-10">
-            <h1 class="text-5xl md:text-7xl font-bold text-white tracking-wider leading-tight">
-                <span class="text-emerald-400">GABRIEL</span> <span class="text-white">PELA</span>
+            <h1 class="text-5xl md:text-7xl font-black text-white tracking-tighter leading-tight">
+                <span class="text-emerald-400 [filter:drop-shadow(0_0_8px_rgba(52,211,153,0.7))]">GABRIEL</span> <span class="text-white [filter:drop-shadow(0_0_8px_rgba(255,255,255,0.5))]">PELA</span>
             </h1>
-            <h2 class="text-5xl md:text-7xl font-bold text-red-600 tracking-wider">
+            <h2 class="text-5xl md:text-7xl font-black text-red-600 tracking-tighter [filter:drop-shadow(0_0_8px_rgba(220,38,38,0.7))]">
                 EUROPA
             </h2>
             <!-- Animação movida apenas para o ícone --><div class="mt-8 flex items-center justify-center text-gray-300">
