--- a/index.html
+++ b/index.html
@@ -55,21 +55,21 @@
             margin-bottom: 1.5rem; /* mb-6 */
         }
 
-        /* Efeito de Empilhamento (Stacking) - Espaçamento aumentado */
+        /* Efeito de Empilhamento (Stacking) - Espaçamento aumentado para botões */
         .sticky-card:nth-of-type(1) {
             top: 20px; 
             z-index: 1;
         }
         .sticky-card:nth-of-type(2) {
-            top: 40px; /* Aumentado de 30px */
+            top: 40px; /* Aumentado */
             z-index: 2;
         }
         .sticky-card:nth-of-type(3) {
-            top: 60px; /* Aumentado de 40px */
+            top: 60px; /* Aumentado */
             z-index: 3;
         }
         
-        /* Animação de flutuar e brilhar (apenas no ícone) */
+        /* Animação de flutuar e brilhar (ícone check) */
         @keyframes float-glow {
           0%, 100% {
             transform: translateY(0);
@@ -80,9 +80,23 @@
             filter: drop-shadow(0 0 12px rgba(52, 211, 153, 1));
           }
         }
-
         .animate-float-glow {
           animation: float-glow 3s ease-in-out infinite;
+        }
+
+        /* Animação de pulsar (ícone WhatsApp) */
+        @keyframes pulse-whatsapp {
+          0%, 100% {
+            transform: scale(1);
+            opacity: 1;
+          }
+          50% {
+            transform: scale(1.1);
+            opacity: 0.8;
+          }
+        }
+        .animate-pulse-whatsapp {
+          animation: pulse-whatsapp 2s ease-in-out infinite;
         }
 
         /* --- Estilos das Partículas --- */
@@ -120,7 +134,7 @@
         }
         /* --- Fim dos Estilos das Partículas --- */
 
-        /* Estilo do Título Hero com Cores e Brilho (Adaptado para Mobile) */
+        /* Estilo do Título Hero (Adaptado para Mobile) */
         .hero-title {
             font-weight: 900; /* font-black */
             letter-spacing: -0.025em; /* tracking-tight */
@@ -226,7 +240,7 @@
         
         <!-- Imagem de Fundo -->
         <div class="absolute inset-0 z-0">
-            <img src="https://i.imgur.com/18Wga9B.png" 
+            <img src="https://i.imgur.com/ka1tTeB.jpeg" 
                  alt="Gabriel Pela Europa Background"
                  class="w-full h-full object-cover opacity-30"
                  onerror="this.src='https://placehold.co/1920x1068/0a0a0a/34D399?text=Carregando+Imagem...'">
@@ -271,8 +285,8 @@
             <!-- Card 1: Divulgue Sua Empresa (FUNDO VERDE) -->
             <section class="sticky-card p-6 md:p-10 flex flex-col justify-center items-center text-center" style="background-color: #008C45; border-color: #008C45;">
                 <div class="w-16 h-16 bg-white/20 rounded-full flex items-center justify-center mb-4"> <!-- Fundo do ícone semi-transparente -->
-                    <!-- Ícone WhatsApp (Corrigido) -->
-                    <svg class="w-8 h-8 text-white" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <!-- Ícone WhatsApp (Pulsante) -->
+                    <svg class="w-8 h-8 text-white animate-pulse-whatsapp" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                         <path d="M12.0007 2.00001C6.48671 2.00001 2.00071 6.48601 2.00071 12.0000C2.00071 14.286 2.72371 16.417 4.00071 18.106L2.30871 22.0000L6.22371 20.3150C7.88471 21.2460 9.85171 21.7860 12.0007 21.7860C17.5147 21.7860 22.0007 17.3000 22.0007 12.0000C22.0007 6.48601 17.5147 2.00001 12.0007 2.00001ZM16.5187 15.604C16.3237 15.932 15.1117 16.514 14.8697 16.611C14.6287 16.711 14.4337 16.758 14.2387 16.661C14.0437 16.564 13.4357 16.37 12.7237 16.177C12.0127 15.984 11.2347 15.758 10.5907 15.115C9.94671 14.471 9.49771 13.689 9.30271 13.361C9.10871 13.033 9.02071 12.870 9.21571 12.542C9.41071 12.214 9.69971 11.834 9.91471 11.564C10.1107 11.294 10.2977 11.144 10.4357 10.875C10.5727 10.606 10.5197 10.470 10.4437 10.325C10.3677 10.180 9.77371 9.62001 9.50471 9.06001C9.23571 8.50001 9.02071 8.58301 8.82571 8.58301C8.63071 8.58301 8.36171 8.51301 8.09271 8.51301C7.82371 8.51301 7.37471 8.58301 7.00571 8.94901C6.63671 9.31501 5.68871 10.231 5.68871 12.134C5.68871 14.037 7.04271 15.890 7.23771 16.084C7.43271 16.279 8.78671 18.277 10.6897 19.167C12.5927 20.057 14.2387 19.829 14.8697 19.732C15.5007 19.636 16.6577 18.913 16.8987 18.271C17.1397 17.629 17.1397 17.087 17.0427 16.904C16.9457 16.721 16.7197 16.272 16.5187 15.604Z" />
                     </svg>
                 </div>
