--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                     </svg>
                 </div>
                 
-                <img src="https://i.imgur.com/NKqQjI0.png" 
+                <img src="https://i.imgur.com/iBC1XFB.png" 
                      alt="Nutricionista Brasileira" 
                      class="w-full h-auto rounded-lg mb-4 object-cover"
                      onerror="this.src='https://placehold.co/776x530/1f2937/f3f4f6?text=Imagem+indisponível'">
