--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                 </div>
                 
                 <!-- Imagem NOVA (Inserida aqui) -->
-                <img src="https://i.imgur.com/axmLQ6x.jpeg" 
+                <img src="https://i.imgur.com/YHJyenR.png" 
                      alt="Tatiana Casotti Viagens" 
                      class="relative z-10 w-full h-auto rounded-lg mb-4 object-cover"
                      onerror="this.src='https://placehold.co/776x530/1f2937/f3f4f6?text=Imagem+indisponível'">
